fixed the broken stylesheets and finished styling

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -1,3 +1,8 @@
+// Place all the styles related to the Store controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* START_HIGHLIGHT */
 .store {
   h1 {
     margin: 0;
@@ -18,7 +23,7 @@
       width: 80px;
       margin-right: 5px;
       margin-bottom: 5px;
-      position: absolute;
+      float: left;
     }
 
     h3 {
@@ -43,3 +48,4 @@
     }
   }
 }
+/* END_HIGHLIGHT */
